--- a/Assets/css/styles2.css
+++ b/Assets/css/styles2.css
@@ -5,3 +5,11 @@
 .movies-cont {
     padding: 7px;
 }
+
+#map {
+    position:absolute!important;
+    margin: 0;
+    padding: 0;
+    height: 400%;
+    width: 100%;
+  }
