Adjusted search bar one 2nd page and tweaked style

--- a/Assets/css/styles2.css
+++ b/Assets/css/styles2.css
@@ -10,6 +10,17 @@
     margin-top: 10px;
 }
 
+.movie-description {
+    margin-left: 10px;
+}
+
+.searchBox {
+    width: 250px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .title {
     cursor: pointer;
 }
