--- a/Assets/css/styles2.css
+++ b/Assets/css/styles2.css
@@ -36,3 +36,13 @@
 .hidden{
     visibility: hidden;
 }
+
+.infoWindowTitle{
+    color: black;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.infoWindowAddr{
+    color: rgb(63, 62, 62);
+}
