--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -22,3 +22,13 @@
 .title {
     cursor: pointer;
 }
+
+#notAButton{
+    visibility: hidden;
+    display: inline-block
+}
+
+.input{
+    display: inline-block;
+}
+
