--- a/Assets/css/styles2.css
+++ b/Assets/css/styles2.css
@@ -14,6 +14,16 @@
     margin-left: 10px;
 }
 
+.history {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    z-index: 99;
+    width: 25%;
+}
+
 #pac-input {
     width: 250px;
     display: flex;
